# political-polarization-chat

./: .gitignore  README.md  gemini_paid_tier_check.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  political_chatbot_app.py
backup/: .gitignore  main.py  streamlit_ui.py
backup_gaza_war/: page_manager.py  simulator.py  user_profile.py
backup_gaza_war/fake_users/: center_right_profile_1.txt  center_right_profile_2.txt  left_profile_1.txt  left_profile_2.txt  right_profile_2.txt
conversation_data/: all_conversations.jsonl  complete_session_8548d3e9_20250817_174522.json  complete_session_871ebe4b_20250817_175441.json  complete_session_98aa31c7_20250817_175032.json
conversation_simulation/: csv_convertor.py  optimizer.py
conversation_simulation/conversations/: 20250916_153602_left_profile_2_control.csv  20250916_153602_left_profile_2_control.json  20250916_153646_left_profile_2_misperception_correction.csv  20250916_153646_left_profile_2_misperception_correction.json  20250916_153720_left_profile_2_shared_identity.csv  20250916_153720_left_profile_2_shared_identity.json  20250916_153757_center_left_profile_2_control.csv  20250916_153757_center_left_profile_2_control.json  20250916_153846_center_left_profile_2_misperception_correction.csv  20250916_153846_center_left_profile_2_misperception_correction.json  (+54 more)
models/: __init__.py  chat_message.py  user_profile.py
services/: __init__.py  ai_service.py  data_service.py  firebase_service.py
simulation/: __init__.py  conversation_simulator.py  experiment_controller.py  interventions.py  metrics_analyzer.py  rate_limiter.py  run.py  run_experiment.py  test_setup.py
ui/: __init__.py  page_manager.py  ui_components.py
utils/: __init__.py  data_exporter.py
(+12 files in other folders)
