[tool.poetry]
name = "political-polarization-chat"
version = "0.1.0"
description = "MLDS Final Project - Conversational Agents for Reducing Political Polarization"
authors = ["Niv Bar <niv.data.science@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.48.0"
google-genai = "^1.29.0"
google-generativeai = "^0.8.5"
python-dotenv = "^1.0.0"
firebase-admin = "^6.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.5"
jupyter = "^1.1.1"
ipywidgets = "^8.1.7"
pytest = "^7.4.0"
black = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"